[package]
name = "curse"
version = "0.1.0"
edition = "2021"

[lib]
name = "curse"
path = "src/lib.rs"

[[bin]]
name = "curse"
path = "src/main.rs"

[dependencies]
argh = "0.1.10"
log = "0.4.17"
matches = "0.1.10"
os_info = "3.6.0"
pretty_env_logger = "0.4.0"
toml = "0.7.2"
serde = { version = "1.0.130", features = ["derive"] }
